[metadata]
name = dnaio
author = Marcel Martin
author_email = marcel.martin@scilifelab.se
url = https://dnaio.readthedocs.io/
description = Read and write FASTA and FASTQ files efficiently
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
project_urls =
    Changelog = https://dnaio.readthedocs.io/en/latest/changes.html
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    xopen >= 1.4.0

[options.packages.find]
where = src

[options.package_data]
* = py.typed, *.pyi, *.h

[options.extras_require]
dev =
    Cython
    pytest
